test/integration/bad/new/bad_constrained_type_in_local2.stan
transformed data {
  simplex[2] x;
  {
    simplex[2] y = x
    print(y);
  }
}
